Rework project to make it working with latest versions.